Aside client overflow fix

--- a/client/styles/_aside.less
+++ b/client/styles/_aside.less
@@ -52,6 +52,7 @@ aside{
 		height:    -moz-calc(~"70% - 130px");
 		height: 	 -o-calc(~"70% - 130px");
 		height: 		calc(~"70% - 130px");
+		overflow-y: auto;
 		.client_list_header{
 			color: #333;
 			display: block;
